# RAG-SaaS

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: rag-saas-AutoDeployTrigger-558fb23c-e0c6-46c5-a865-6f621534495e.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/app/: db.py  observability.py
backend/app/api/admin/: __init__.py  route.py
backend/app/api/auth/: __init__.py  jwt.py  route.py
backend/app/api/chat/: __init__.py  chat_config.py  models.py  route.py  summary.py  upload.py  vercel_response.py
backend/app/api/chat/engine/: engine.py  generate.py  index.py  vectordb.py
backend/app/api/chat/engine/loaders/: __init__.py
backend/app/api/chat/services/: file.py  suggestion.py
backend/app/api/chat_router/: chat.py  chat_config.py  vercel_response.py
backend/app/api/conversation/: __init__.py  route.py
backend/app/api/services/: suggestion.py
backend/app/core/: config.py  db.py  security.py  user.py
backend/app/engine/: engine.py
backend/app/models/: user_model.py
backend/app/schemas/: admin_schema.py  auth_schema.py  user_schema.py
backend/app/services/: __init__.py  admin_service.py  config_service.py  conversation_service.py  user_service.py
backend/config/: tools.yaml
frontend/: .env  .env.example  Dockerfile  README.md  next.config.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: ConversationContext.tsx  authProvider.tsx  globals.css  layout.tsx  page.tsx
frontend/app/admin/: AdminAuthProvider.tsx  DataIngestion.tsx  RAGConfiguration.tsx  UsersManagement.tsx  layout.tsx  page.tsx
frontend/components/: banner-card.tsx  header.tsx  history.tsx  loading.tsx  sidebar.tsx  theme-toggle.tsx
frontend/config/: features.ts  site.ts  tools.json
frontend/hooks/: useGitHubStars.tsx
frontend/utils/: authenticatedFetch.tsx
(+27 files in other folders)
